add meta info block. support per-post author

--- a/_posts/2014-02-23-blog-is-up.md
+++ b/_posts/2014-02-23-blog-is-up.md
@@ -1,6 +1,8 @@
 ---
 layout: post
 category : hackathon
+author: Pili Hu
+author_url: http://hupili.net/
 title: "Code4HK Blog Is Up"
 tagline: "Code4HK Blog Is Up"
 tags : [code4hk, blog]
@@ -11,3 +13,31 @@ tags : [code4hk, blog]
 
 This is a "hello world".
 
+## Where is the source code of this post?
+
+Checkout [_posts/2014-02-23-blog-is-up.md](https://github.com/code4hk/blog/blob/gh-pages/_posts/2014-02-23-blog-is-up.md) in our blog repo.
+
+## How do I post to this blog?
+
+The workflow is noted in the [about page](/about.html).
+A typical post starts with the following front matters.
+Please input your information accordingly.
+
+{% comment This is a hack to present liquid codes in rendered MD... %}
+{% assign lbrace = '{' %}
+{% assign rbrace = '}' %}
+
+```
+---
+layout: post
+category : hackathon
+author: Pili Hu
+author_url: http://hupili.net/
+title: "Code4HK Blog Is Up"
+tagline: "Code4HK Blog Is Up"
+tags : [code4hk, blog]
+---
+{{ lbrace }}% include JB/setup %{{ rbrace }}
+
+Here is your content
+```
