fix comment block

--- a/_posts/2014-02-23-blog-is-up.md
+++ b/_posts/2014-02-23-blog-is-up.md
@@ -23,7 +23,9 @@ The workflow is noted in the [about page](/about.html).
 A typical post starts with the following front matters.
 Please input your information accordingly.
 
-{% comment This is a hack to present liquid codes in rendered MD... %}
+{% comment %}
+This is a hack to present liquid codes in rendered MD...
+{% endcomment %}
 {% assign lbrace = '{' %}
 {% assign rbrace = '}' %}
 
